--- a/modulo1/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/template-loja/add-produto.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <p>lojinha do Zeca</p>
+        <p id="titleLoja">lojinha do Zeca</p>
     </header>
     
     <nav>
-        <a href="Página Inicial">Página Inicial</a>
-        <a href="Controle de Estoque">Controle de Estoque</a>
-        <a href="Adicionar Produto">Adicionar Produto</a>
-        <a href="Funcionários">Funcionários</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
     </nav>
 
     
-    <h2>Adicionar Produto</h2>
+    <h2 id="produtos">Adicionar Produto</h2>
     <form action="">
             <label for="link-foto">Link para foto: </label>
             <input type="url" id="link-foto" name="link-foto">
@@ -35,12 +36,12 @@
             <br> 
 
             <!-- Preencha as propriedades necessárias para os elementos abaixo -->
-            <label> for="Quantidade"> Quantidade: </label>
-            <input> type ="text"  id="Quantidade" name= "preço">
+            <label for="Quantidade">  Quantidade: </label>
+            <input type ="text"  id="Quantidade" name= "preço">
 
             <br>
             <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
-            <button type="">Adicionar</button>
+            <button type="butão">Adicionar</button>
 
     </form>
 
