--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Controle de Estoque</title>
 </head>
 <body>
     <header>
-        <p>Nome da lojinha</p>
+        <p class="titleLoja">Nome da lojinha</p>
     </header>
     
     <nav>
-        <a href="Página Inicial">Página Inicial</a>
-        <a href="Controle de Estoque">Controle de Estoque</a>
-        <a href="Adicionar Produto">Adicionar Produto</a>
-        <a href="Funcionários">Funcionários</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
     </nav>
 
-    <h2>Controle de Estoque</h2>
+    <h2 id="estoque">Controle de Estoque</h2>
 
     <table>
         <tr>
