--- a/modulo1/html-sistema-loja/template-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/template-loja/funcionarios.html
@@ -5,29 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <p>Nome da loja</p>
+        <p class="titleLoja">lojinha do Zeca</p>
     </header>
     
     <nav>
-        <a href="Página Inicial">Página Inicial</a>
-        <a href="Controle de Estoque">Controle de Estoque</a>
-        <a href="Adicionar Produto">Adicionar Produto</a>
-        <a href="Funcionários">Funcionários</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
+       
     </nav>
 
-    <h2>Funcionários</h2>
+    <h2 class="funcionario">Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
         <ul>
-            <li> Jonathan Joestar. </li>
-            <li>Joseph Joestar.</li>
-            <li>Jotaro Kujo.</li>
-            <li>Josuke Higashikata.</li>
-            <li>Giorno Giovanna.</li>
-            <li>Jolyne Cujoh</li>
-            <li>Johnny Joestar.</li>
+            <li class="funcionariojojo"> Jonathan Joestar. </li>
+            <li class="funcionariojojo">Joseph Joestar.</li>
+            <li class="funcionariojojo">Jotaro Kujo.</li>
+            <li class="funcionariojojo">Josuke Higashikata.</li>
+            <li class="funcionariojojo">Giorno Giovanna.</li>
+            <li class="funcionariojojo">Jolyne Cujoh</li>
+            <li class="funcionariojojo">Johnny Joestar.</li>
         </ul>
 </body>
 </html>
