--- a/modulo1/html-sistema-loja/template-loja/index.html
+++ b/modulo1/html-sistema-loja/template-loja/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nome da Loja</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="titleLoja">
         <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
         <p>Frase de chamada para sua loja</p>
     </header>
 
     <nav>
-        <a href="Página Inicial">Página Inicial |</a>
-        <a href="Controle de Estoque">Controle de Estoque |</a>
-        <a href="Adicionar Produto">Adicionar Produto |</a>
-        <a href="Funcionários">Funcionários</a>
+        <a href="index.html">Página Inicial |</a>
+        <a href="ctrl-estoque.html">Controle de Estoque |</a>
+        <a href= "add-produto.html">Produto|</a>
+        <a href="funcionarios.html">Funcionários</a>
     </nav>
 
     <main>
