meu pequeno erro

--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -51,7 +51,7 @@
     <p>Dev Jr com especializações em Javascript, Css e HTML.</p>
     <p>Sou Pedro Sou um Dev Jr sem Experiência na area, mas estou aqui para dar 1000% de mim,</p>
     <P> vamos Descobrir mais sobre  Pedro?</P>
-    <button class="Btt1" >Saiba Mais </button>
+    <button class="Btt1" >clique aqui </button>
     
 
 </div>
