--- a/modulo1/css-labetube/nada.html
+++ b/modulo1/css-labetube/nada.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nada</title>
+    <link rel="stylesheet" href="site.css">
+    <title>home</title>
 </head>
 <body>
-   nada (queria ter mais tempo ams nao tenho sorry)
+    <header class="lalo">LABETUBE INC.</header>
+<a1>Bem Vindo Ao labe LabeTube </a1>
+<H1> site de videos test.</H1>
+<button class="butaozin" href="index.html"> homepage</button>
 </body>
 </html>
